--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "mongoose-request-context",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A simple plugin for saving data from a (connect/express) request context.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/michaelkrone/mongoose-request-context.git"
+  },
   "keywords": [
     "mongoose",
     "mongoose-plugin",
     "mongoose-request-context",
-    "request data",
+    "access request data",
     "context",
-    "modified by"
+    "modified by",
+    "created by"
   ],
   "main": "./lib/index.js",
   "dependencies": {
